# evolution-3e

./: .gitignore  Makefile.am  NEWS  README  README.iTIP  TODO  autogen.sh  configure.ac  messages.po
3.2/: AUTHORS  NEWS  autogen.sh  configure.ac  uncrustify.conf
3.2/eds-plugin/: Makefile.am  dns-txt-search.c  e-cal-backend-3e-attach.c  e-cal-backend-3e-factory.h  e-cal-backend-3e-priv.h  e-cal-backend-3e-sync.c  e-cal-backend-3e-utils.c  e-cal-backend-3e.c
3.2/evolution-plugin/: Makefile.am  acl.c  acl.h  dns-txt-search.c  dns-txt-search.h  eee-account.c  eee-accounts-manager.c  eee-accounts-manager.h  eee-calendar-config.c  eee-calendar-config.h  org-gnome-evolution-eee.eplug.in  org-gnome-evolution-eee.error  org-gnome-evolution-eee.glade  subscribe.c  subscribe.h  utils.c  utils.h
3.2/interface/: Makefile.am  server.xdl
3.2/po/: POTFILES.in  cs.po
3.4/: Makefile.am  autogen.sh  configure.ac
3.4/eds-plugin/: Makefile.am  dns-txt-search.c  dns-txt-search.h  e-cal-backend-3e-attach.c  e-cal-backend-3e-factory.c  e-cal-backend-3e-priv.h  e-cal-backend-3e-sync.c  e-cal-backend-3e-utils.c  e-cal-backend-3e.c  e-cal-backend-3e.h
3.4/evolution-plugin/: acl.c  eee-account.c  eee-account.h  eee-accounts-manager.c  eee-accounts-manager.h  eee-calendar-config.c  eee-calendar-config.h  org-gnome-evolution-eee.eplug.in  org-gnome-evolution-eee.glade  subscribe.c  utils.c  utils.h
3.4/interface/: server.xdl
3.4/po/: POTFILES.in  cs.po
3.6/: Makefile.am  configure.ac
3.6/collection/: Makefile.am  module-eee-backend.c
3.6/docs/: Doxyfile
3.6/eds-plugin/: Makefile.am  e-cal-backend-3e-factory.c  e-cal-backend-3e.c  e-cal-backend-3e.h
3.6/evolution-plugin/: Makefile.am  acl.c  acl.h  dns-txt-search.c  dns-txt-search.h  e-mail-config-eee-summary.c  e-mail-config-eee-summary.h  eee-account.c  eee-account.h  eee-accounts-manager.h  eee-calendar-config.c  evolution-cal-config-eee.c  module-eee-backend.c  org-gnome-evolution-eee.eplug.in  subscribe.c  subscribe.h  utils.c  utils.h
3.6/utils/: Makefile.am  e-source-eee.c  e-source-eee.h
docs/: Doxyfile  Makefile.am  atta-design.doc  design.tex  eds-evo.doc  eee-sched.doc  evo-sched.doc  index.doc  itip.doc
eds-patches/2.12/: 0005-always-pass-username-password-to-e_cal_open.patch  0007-don-t-leak-ENameSelectorDialog-in-ENameSelector.patch  0008-don-t-cache-read-only-status-in-ECal.patch  0010-remove-useless-listener-duplication-in-impl_CalFacto.patch
eds-patches/2.22/: dist-patch.patch  ecal-credentials-fix.patch  eee-attach-store.patch  group-auth.patch  orbit-fix.patch  sync-and-error-notify.patch
eds-patches/2.24/: ecal-credentials-fix.patch
eds-patches/2.26/: ecal-credentials-fix.patch  ecal-dont-cache-ro-flag.patch  eee-attach-store.patch  group-auth.patch
eds-patches/2.28/: ecal-credentials-fix.patch  ecal-dont-cache-ro-flag.patch  eee-attach-store.patch  group-auth.patch  sync-and-error-notify.patch
eds-patches/2.29.91/: eds-2.29.patch
eds-patches/2.30/: eds-2.30.patch
eds-patches/2.32/: eds-2.32.patch
eds-patches/3.0/: eds-3.0.patch
eds-patches/3.2/: eds-3.2.patch
eds-patches/3.4/: eds-3.4.2.patch
eds-patches/svn/: cap-no-send-itip.patch  series
eds-plugin/: Makefile.am  dns-txt-search.c  e-cal-backend-3e-attach.c  e-cal-backend-3e-factory.c  e-cal-backend-3e-factory.h  e-cal-backend-3e-priv.h  e-cal-backend-3e-sync.c  e-cal-backend-3e-sync.h  e-cal-backend-3e-utils.c  e-cal-backend-3e-utils.h  e-cal-backend-3e.c  e-cal-backend-3e.h
evolution-patches/2.12/: 0001-overriding-of-popup-menu-items-as-documented-in-e_po.patch  0002-install-e-cal-popup.h-includes.patch  0003-extend-plugin-system-to-add-support-for-events-on-co.patch  0005-remove-useless-EBook-access-from-EMeetingStore.patch  0009-alarm-notify-auth-should-use-auth-key.patch  0010-add-CAL_STATIC_CAPABILITY_NO_SEND_IMIP-calendar-capa.patch  0011-dont-send-invitations-for-3e.patch  dont-display-send-notice-dialogs-for-3e.patch  itip-comments.patch
evolution-patches/2.22/: component-activation-event.patch  disable-source-update-flag.patch  dont-display-send-notice-dialogs-for-3e.patch  dont-send-invitations-for-3e.patch  itip-comments.patch  series
evolution-patches/2.24/: dont-display-send-notice-dialogs-for-3e.patch  dont-send-invitations-for-3e.patch  evolution-help.patch  (+1 more)
evolution-plugin/: Makefile.am  acl.c  acl.h  dns-txt-search.c  dns-txt-search.h  eee-account.c  eee-account.h  eee-accounts-manager.c  eee-accounts-manager.h  eee-calendar-config.c  eee-calendar-config.h  eee-calendar.c  eee-calendar.h  eee-settings.c  eee-settings.h  org-gnome-eee-cal-subscription.xml.in  org-gnome-evolution-eee-old.eplug.in  org-gnome-evolution-eee.eplug.in  org-gnome-evolution-eee.error  org-gnome-evolution-eee.glade  subscribe.c  subscribe.h  utils.c  utils.h
gui/: Makefile.am  dns-txt-search.c  eee-accounts-manager.c  eee-accounts-manager.h  eee-source.c  org-gnome-evolution-eee.eplug.in
interface/: Makefile.am  server.xdl
older_versions/: README  configure.ac
older_versions/eds-plugin/: dns-txt-search.c  dns-txt-search.h  e-cal-backend-3e-attach.c  e-cal-backend-3e-factory.c  e-cal-backend-3e-factory.h  e-cal-backend-3e-priv.h  e-cal-backend-3e-sync.c  e-cal-backend-3e-utils.c  e-cal-backend-3e.c  e-cal-backend-3e.h
older_versions/evolution-plugin/: Makefile.am  acl.c  acl.h  dns-txt-search.c  eee-account.c  eee-account.h  eee-accounts-manager.c  eee-accounts-manager.h  eee-calendar-config.c  eee-calendar-config.h  org-gnome-eee-cal-subscription.xml.in  org-gnome-evolution-eee-old.eplug.in  org-gnome-evolution-eee.eplug.in  org-gnome-evolution-eee.glade  subscribe.c  subscribe.h  utils.c  utils.h
older_versions/po/: cs.po
patches/: 0001-overriding-of-popup-menu-items-as-documented-in-e_po.patch  0001-use-password-manager-key-from-ESource-auth-key-prope.patch  0002-install-e-cal-popup.h-includes.patch  0003-extend-plugin-system-to-add-support-for-events-on-co.patch  Makefile.am
po/: cs.po  evolution-3e-plugin.pot
src/: Makefile.am  e-cal-backend-3e-factory.c  e-cal-backend-3e.c  e-cal-backend-3e.h
(+169 files in other folders)
