# ACLOCAL_AMFLAGS=-I m4

AUTOMAKE_OPTIONS = foreign

SUBDIRS = utils collection eds-plugin evolution-plugin docs po

INTLTOOL_FILES = intltool-extract.in \
                 intltool-merge.in \
                 intltool-update.in
EXTRA_DIST = \
  org-gnome-evolution-eee.eplug.in \
  org-gnome-evolution-eee.glade \
  org-gnome-evolution-eee.error \
  $(INTLTOOL_FILES)
